-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
ptl_yaml_route_display() does not parse the netlink reply correctly. This results in only one route being displayed by the lctl show_route command.
[root@kjcf09n02 ~]# lnetctl route show
route:
- net: gni4
gateway: 10.12.0.1@o2ib4
- net: gni4
gateway: 10.12.0.4@o2ib4
- net: gni4
gateway: 10.12.0.3@o2ib4
- net: gni4
gateway: 10.12.0.5@o2ib4
[root@kjcf09n02 ~]# lctl show_route
net gni4 hops -1 gw 10.12.0.5@o2ib4 down pri 0
[root@kjcf09n02 ~]# lctl get_param routes
routes=
Routing Disabled
net hops priority state router
gni4 -1 0 down 10.12.0.1@o2ib4
gni4 -1 0 down 10.12.0.4@o2ib4
gni4 -1 0 down 10.12.0.3@o2ib4
gni4 -1 0 down 10.12.0.5@o2ib4
[root@kjcf09n02 ~]#
- is related to
-
LU-18417 Finish IPv6 support
-
- Open
-