LU-19261 lnet: Fix ptl_yaml_route_display reply parsing

The netlink reply for dumping the route config consists of a sequence
of mappings. Each mapping correlates with a single route config, so
ptl_yaml_route_display() needs to print the route config when it
sees the YAML_MAPPING_END_EVENT rather than the
YAML_SEQUENCE_END_EVENT. This fixes a bug that resulted in only a
single route being displayed by the lctl show_route command even when
multiple routes were configured.

Have sanity-lnet test_111 check the output of lctl show_route in
addition to lnetctl route show.

HPE-bug-id: LUS-13006
Test-Parameters: trivial testlist=sanity-lnet
Signed-off-by: Chris Horn <chris.horn@hpe.com>
Change-Id: Ic75a8bc04eb33ace54a3094727d87ba8ab88f4bb
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/60745
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Frank Sehr <fsehr@whamcloud.com>
Reviewed-by: Serguei Smirnov <ssmirnov@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>